# baremetal_experiments

./: README.md
baremetal_cpp/: CMakeLists.txt  Makefile  README.md  basic_stream.h  bit_map_arena.h  gcc8.3.0_toolchain.cmake  kernel8.elf  kernel8.img  libc_functions.cpp  main.cpp  mini_uart.cpp  mini_uart.h  raspberrypi3_cross_compiler.md  toolchain.cmake
baremetal_cpp/cmake_toolchain/: esp_gcc4.8.0_toolchain.cmake  raspi_clang8_toolchain.cmake
baremetal_cpp/core/: CMakeLists.txt  arena_allocator.h  baremetal_allocator.h  basic_stream.h  bit_map_arena.h  bit_map_heap.h  global_objects.cpp  global_objects.h  libc_functions.cpp  mock_exceptions.cpp  mock_exceptions.h  static_objects.cpp  static_objects.h  test_function.h
baremetal_cpp/docs/: esp8266_build.md  esp8266_connection.md  esp8266_cross_compiler.md  raspberrypi3_cross_compiler.md  raspi_build.md  raspi_connection.md
baremetal_cpp/esp/: CMakeLists.txt  Makefile  karina_arena.h  karina_main.cpp  karina_main.ld  load.ld
baremetal_cpp/esp/cmake_toolchain/: gcc4.8.0_toolchain.cmake
baremetal_cpp/esp/src/: leds.h  main.cpp  main.h  uart.h
baremetal_cpp/raspi/: CMakeLists.txt  Makefile
baremetal_cpp/raspi/cmake_toolchain/: gcc8.3.0_toolchain.cmake
baremetal_cpp/raspi/src/: main.cpp  mini_uart.cpp  mini_uart.h  start.S
baremetal_cpp/stuff/: uart_output (copy).h  unique_ptr_stuff
boot_files/: readme.txt
mini_uart_io/: Makefile  Makefile.gcc  README.md  load.ld  start.s
mini_uart_io/src/: main.c  start.s
mini_uart_io_cpp/: Makefile  Makefile.clang  Makefile.gcc  README.md  arena.h  arena_allocator.h  basic_stream.h  bit_map_arena.h  dummies.cpp  kernel8.elf  kernel8.img  load.ld  main.c  main.cpp  mini_uart.cpp  mini_uart.h  start.S  uart_output.cpp  uart_output.h
mini_uart_io_cpp/stuff/: uart_output (another copy).h
unused_experimental_headers/stuff/: stream_stuff.h
